# specpilot-ai

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: launch_checklist.md  specpilot_ai_product_plan.md
examples/: desktop_pc_build_request.json  video_editing_laptop_request.json
scripts/: check_release_endpoints.py  render_product_plan_pdf.py
specpilot_ai/: __init__.py
specpilot_ai/api/: auth.py  main.py
specpilot_ai/core/: config.py  models.py
specpilot_ai/data/: catalog.py
specpilot_ai/graph/: neo4j_client.py  product_graph.py
specpilot_ai/services/: benchmark_validation.py  build_blueprint.py  buyer_challenge.py  checkout_lock.py  community_reply.py  decision_defense.py  defect_claim.py  final_decision.py  first_boot_setup.py  intake.py  outcome_share_card.py  price_breakdown.py  purchase_journey.py  quality.py  reviewer_quick_card.py  shopping_cart_intake.py  spec_risk_scanner.py  trust.py  upgrade_readiness.py  warranty_return.py
specpilot_ai/storage/: sqlite_store.py
specpilot_ai/web/: admin_page.py  launch_page.py  public_report_page.py
specpilot_ai/workflows/: purchase_agent.py
tests/: test_api.py  test_purchase_agent.py
