[project]
name = "specpilot-ai"
version = "0.1.0"
description = "PC and laptop shopping decision agent with LangChain, LangGraph and Neo4j"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "neo4j>=5.23.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-neo4j>=0.3.0",
  "langgraph>=0.2.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["specpilot_ai*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "reportlab>=4.2.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
